препроцессоры и автоматизация дз

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,12 @@
 // Начните писать стили здесь
-body {
-  background-color: tomato;
-}
+@import "./common/fonts.less";
+@import "./common/variables.less";
+@import "./bloks/page.less";
+@import "./bloks/main-header.less";
+@import "./bloks/site-list.less";
+@import "./bloks/main-nav.less";
+@import "./bloks/hero.less";
+@import "./bloks/welcome.less";
+@import "./bloks/advantages.less";
+@import "./bloks/promo-block.less";
+@import "./bloks/main-footer.less";
