препроцессоры и автоматизация дз
выполнена базовая стилизация

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,3 +10,9 @@
 @import "./bloks/advantages.less";
 @import "./bloks/promo-block.less";
 @import "./bloks/main-footer.less";
+@import "./bloks/form-container-header.less";
+@import "./bloks/review-form-section.less";
+@import "./bloks/describe-impressions.less";
+@import "./bloks/popup_error.less";
+@import "./bloks/photo-gallery.less";
+@import "./bloks/promo-block-catalog.less";
