--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -1,3 +1,11 @@
+// Цвета
+
 @text-description-black: #333333;
 @background-color-blue: #81b3d2;
 @background-color-grey: #eeeeee;
+
+// Экран
+
+@mobile-width: 320px;
+@tablet-width: 768px;
+@desktop-width: 1200px;
