--- a/source/less/bloks/advantages.less
+++ b/source/less/bloks/advantages.less
@@ -1,3 +1,11 @@
+.advantages__list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+}
+
 .advantages__item--blue {
   background-color: @background-color-blue;
   color: #ffffff;
@@ -6,28 +14,67 @@
   font-weight: 700;
   line-height: 26px;
   font-size: 18px;
+  padding: 33px 18px 40px 18px;
+
+  @media (min-width: @tablet-width) {
+    text-align: center;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 26px;
+    margin: 0;
+    padding: 52px 33px 31px 33px;
+    width: 256px;
+    height: 256px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 400px;
+    height: 256px;
+  }
 }
 
 .advantages__item--blue .advantages__number {
   font-weight: 400;
   line-height: 21px;
   font-size: 14px;
+
+  @media (min-width: @tablet-width) {
+    margin: 9px 0 21px 0;
+  }
 }
 
 .advantages__item--blue .advantages__discription {
   font-weight: 400;
   line-height: 21px;
   font-size: 14px;
+
+  @media (min-width: @tablet-width) {
+    margin: 9px 0 21px 0;
+  }
 }
 
 .advantages__item--white {
   color: #000000;
   background-color: #ffffff;
   text-transform: uppercase;
+  text-align: left;
   list-style-type: none;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    width: 256px;
+    height: 331px;
+    text-align: center;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 26px;
+    margin: 0;
+    padding: 144px 25px 56px 30px;
+  }
 }
 
 .advantages__item--white .advantages__discription {
@@ -38,6 +85,7 @@
 }
 
 .advantages__image {
+  display: block;
   list-style-type: none;
   background-repeat: no-repeat;
 }
@@ -46,9 +94,34 @@
   color: #000000;
   background-color: @background-color-grey;
   text-transform: uppercase;
+  text-align: center;
   list-style-type: none;
+  font-size: 18px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    width: 256px;
+    height: 256px;
+    text-align: center;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 26px;
+    margin: 0;
+    padding: 41px 33px 63px 33px;
+  }
 }
 
 .advantages__discription-grey {
   color: @text-description-black;
+  font-weight: 400;
+  line-height: 21px;
+  font-size: 14px;
+  margin: 0;
+}
+
+.advantages__number-grey {
+  font-weight: 400;
+  line-height: 21px;
+  font-size: 14px;
 }
