--- a/source/less/bloks/hero.less
+++ b/source/less/bloks/hero.less
@@ -1,3 +1,24 @@
 .hero {
   background: #325f7e;
+  text-align: center;
+  height: 389px;
+  background-image: url(../img/back-mobile.jpg);
+  background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    background-image: url(../img/back-tablet.jpg);
+    height: 518px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url(../img/back-desktop.jpg);
+  }
+}
+
+.hero__img {
+  margin: 90px 0 0 0;
+
+  @media (min-width: @tablet-width) {
+    margin: 77px 0 0 0;
+  }
 }
