--- a/source/less/bloks/welcome.less
+++ b/source/less/bloks/welcome.less
@@ -5,13 +5,35 @@
   text-align: center;
   background-color: #ffffff;
   color: #000000;
+  text-transform: uppercase;
+  padding: 32px 18px 16px 18px;
+
+  @media (min-width: @tablet-width) {
+    padding: 47px 124px 55px 124px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 30px 345px 20px 345px;
+  }
 }
 
 .welcome__header {
-  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+    margin: 20px;
+  }
 }
 
 .welcome__text {
-  text-transform: uppercase;
   color: @text-description-black;
+  font-size: 14px;
+  font-weight: 400;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 29px;
+    margin-bottom: 10px;
+  }
 }
