--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 // Начните писать стили здесь
 @import "./common/fonts.less";
 @import "./common/variables.less";
+@import "./common/global.less";
 @import "./bloks/page.less";
 @import "./bloks/main-header.less";
 @import "./bloks/site-list.less";
