домашка адаптивная сетка

--- a/source/less/bloks/describe-impressions.less
+++ b/source/less/bloks/describe-impressions.less
@@ -12,3 +12,16 @@
   line-height: 26px;
   font-size: 18px;
 }
+
+.describe-impressions__message {
+  width: 279px;
+  padding: 16px;
+
+  @media (min-width: @tablet-width) {
+    width: 648px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 768px;
+  }
+}
