--- a/source/less/bloks/form-container-header.less
+++ b/source/less/bloks/form-container-header.less
@@ -14,3 +14,9 @@
   text-transform: uppercase;
   color: @text-description-black;
 }
+
+.form-container {
+  @media (min-width: @tablet-width) {
+    padding: 0;
+  }
+}
