--- a/source/less/bloks/promo-block-catalog.less
+++ b/source/less/bloks/promo-block-catalog.less
@@ -1,15 +1,19 @@
 .promo-block-catalog__header {
   font-weight: 700;
-  line-height: 26px;
+  line-height: 18px;
   font-size: 21px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
 }
 
 .promo-block-catalog__text {
   font-weight: 700;
   line-height: 26px;
-  font-size: 18px;
+  font-size: 14px;
   text-align: center;
   text-transform: uppercase;
   color: @text-description-black;
