--- a/source/less/bloks/promo-block.less
+++ b/source/less/bloks/promo-block.less
@@ -1,5 +1,6 @@
 .promo-block {
   background-color: #ffffff;
+  padding: 17px 20px 48px 20px;
 
   @media (min-width: @tablet-width) {
     padding: 60px 166px 55px 166px;
@@ -12,6 +13,7 @@
   text-align: center;
   font-size: 21px;
   line-height: 26px;
+  margin: 12px 0 0 0;
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
@@ -24,6 +26,7 @@
   text-align: center;
   font-size: 14px;
   line-height: 24px;
+  margin: 14px 0 14px 0;
 
   @media (min-width: @tablet-width) {
   }
@@ -41,6 +44,8 @@
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
+  width: 284px;
+  padding: 17px 30px 15px 30px;
 
   @media (min-width: @tablet-width) {
     width: 458px;
