--- a/source/less/bloks/welcome.less
+++ b/source/less/bloks/welcome.less
@@ -12,7 +12,7 @@
     padding: 47px 124px 55px 124px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     padding: 30px 345px 20px 345px;
   }
 }
