--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "./common/fonts.less";
 @import "./common/variables.less";
 @import "./common/global.less";
+@import "./bloks/button.less";
 @import "./bloks/page.less";
 @import "./bloks/main-header.less";
 @import "./bloks/site-list.less";
@@ -12,7 +13,7 @@
 @import "./bloks/promo-block.less";
 @import "./bloks/main-footer.less";
 @import "./bloks/form-container-header.less";
-@import "./bloks/review-form-section.less";
+@import "./bloks/review-form.less";
 @import "./bloks/describe-impressions.less";
 @import "./bloks/popup_error.less";
 @import "./bloks/photo-gallery.less";
