--- a/source/less/bloks/advantages.less
+++ b/source/less/bloks/advantages.less
@@ -3,7 +3,28 @@
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
-  align-items: center;
+
+  list-style: none;
+}
+
+.advantages__item {
+  @media (min-width: @tablet-width) {
+    width: 33.33%;
+  }
+}
+
+.advantages__image {
+  @media (min-width: @tablet-width) {
+    width: 66.66%;
+
+    list-style-type: none;
+    background-repeat: no-repeat;
+  }
+
+  img {
+    min-width: 100%;
+    display: block;
+  }
 }
 
 .advantages__item--blue {
@@ -17,19 +38,11 @@
   padding: 33px 18px 40px 18px;
 
   @media (min-width: @tablet-width) {
-    text-align: center;
     font-size: 21px;
     font-weight: 700;
     line-height: 26px;
     margin: 0;
     padding: 52px 33px 31px 33px;
-    width: 256px;
-    height: 256px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 400px;
-    height: 256px;
   }
 }
 
@@ -66,9 +79,6 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
-    width: 256px;
-    height: 331px;
-    text-align: center;
     font-size: 21px;
     font-weight: 700;
     line-height: 26px;
@@ -84,12 +94,6 @@
   line-height: 21px;
 }
 
-.advantages__image {
-  display: block;
-  list-style-type: none;
-  background-repeat: no-repeat;
-}
-
 .advantages__item-grey {
   color: #000000;
   background-color: @background-color-grey;
@@ -101,9 +105,6 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
-    width: 256px;
-    height: 256px;
-    text-align: center;
     font-size: 21px;
     font-weight: 700;
     line-height: 26px;
