--- a/source/less/bloks/page.less
+++ b/source/less/bloks/page.less
@@ -13,4 +13,14 @@
   box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
   margin: 0 auto 0 auto;
   padding: 0;
+
+  width: @mobile-width;
+
+  @media (min-width: @tablet-width) {
+    width: @tablet-width;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: @desktop-width;
+  }
 }
