--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -3,6 +3,7 @@
 @text-description-black: #333333;
 @background-color-blue: #81b3d2;
 @background-color-grey: #eeeeee;
+@background-color-placeholder: #f2f2f2;
 
 // Экран
 
