--- a/source/less/bloks/site-list.less
+++ b/source/less/bloks/site-list.less
@@ -2,12 +2,21 @@
   background-color: #81b3d2;
   color: #ffffff;
   list-style-type: none;
+  position: relative;
+
+  @media (min-width: @mobile-width) {
+    width: 320px;
+    min-height: 56px;
+    margin: 0;
+    padding: 0;
+  }
 
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     background-color: #ffffff;
+    margin: 0;
   }
 }
 
@@ -18,13 +27,21 @@
 }
 
 .site-list__link {
+  display: block;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
   text-align: center;
   color: inherit;
   text-decoration: none;
-  text-transform: uppercase;
+
+  @media (min-width: @mobile-width) {
+    text-transform: uppercase;
+    border-top: 1px solid #678fa8;
+    border-bottom: 1px solid #9ac2db;
+    padding: 8px 20px 6px 20px;
+    cursor: pointer;
+  }
 
   @media (min-width: @tablet-width) {
     color: #000000;
@@ -35,6 +52,7 @@
     line-height: 21px;
     text-transform: uppercase;
     padding-top: 18px;
+    border: none;
   }
 
   @media (min-width: @desktop-width) {
