добавлена интерактивная карта

--- a/source/less/bloks/site-list.less
+++ b/source/less/bloks/site-list.less
@@ -5,7 +5,7 @@
   position: relative;
 
   @media (min-width: @mobile-width) {
-    width: 320px;
+    min-width: 320px;
     min-height: 56px;
     margin: 0;
     padding: 0;
@@ -17,6 +17,7 @@
     justify-content: space-between;
     background-color: #ffffff;
     margin: 0;
+    padding: 0;
   }
 }
 
@@ -52,6 +53,7 @@
     line-height: 21px;
     text-transform: uppercase;
     padding-top: 18px;
+    width: 153px;
     border: none;
   }
 
