--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,4 @@
 @import "./bloks/popup_error.less";
 @import "./bloks/photo-gallery.less";
 @import "./bloks/promo-block-catalog.less";
+@import "./bloks/map.less";
