работа с сетками продолжение 2

--- a/source/less/bloks/advantages.less
+++ b/source/less/bloks/advantages.less
@@ -15,15 +15,26 @@
 
 .advantages__image {
   @media (min-width: @tablet-width) {
+    position: relative;
     width: 66.66%;
-
     list-style-type: none;
     background-repeat: no-repeat;
+    overflow: hidden;
   }
 
   img {
-    min-width: 100%;
     display: block;
+    min-width: 100%;
+
+    @media (min-width: @tablet-width) {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      min-height: 100%;
+      max-width: 120%;
+      width: auto;
+    }
   }
 }
 
