--- a/source/less/bloks/main-footer.less
+++ b/source/less/bloks/main-footer.less
@@ -25,6 +25,12 @@
   }
 }
 
+.social__button {
+  svg {
+    display: block;
+  }
+}
+
 .main-footer__wrapper {
   display: flex;
   flex-direction: column;
