--- a/source/less/bloks/main-header.less
+++ b/source/less/bloks/main-header.less
@@ -11,13 +11,13 @@
   }
 }
 
-.main-header__logo-img {
+.main-header__logo {
   @media (min-width: @tablet-width) {
+    display: block;
     position: absolute;
     top: 0;
     left: 50%;
-    margin-left: -51px;
-    height: 96px;
+    transform: translateX(-50%);
     z-index: 1;
   }
 }
