--- a/source/less/bloks/photo-gallery.less
+++ b/source/less/bloks/photo-gallery.less
@@ -15,14 +15,18 @@
 
 .photo-gallery__item {
   @media (min-width: @tablet-width) {
+    width: 50%;
+    &--main {
+      width: 100%;
+    }
   }
 }
 
 .photo-gallery__item-information {
   display: flex;
   flex-direction: column;
+  width: 100%;
   padding: 15px 0 0 0;
-  width: 280px;
   background-color: #f2f2f2;
 }
 
@@ -30,7 +34,6 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: row;
-    width: 648px;
     padding: 22px 20px 15px 20px;
     margin: 0;
   }
