домашка адаптивные сетки

--- a/source/less/bloks/form-container-header.less
+++ b/source/less/bloks/form-container-header.less
@@ -4,6 +4,10 @@
   font-size: 18px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
 }
 
 .form-container__discription {
