--- a/source/less/bloks/promo-block.less
+++ b/source/less/bloks/promo-block.less
@@ -5,6 +5,10 @@
   @media (min-width: @tablet-width) {
     padding: 60px 166px 55px 166px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 60px 382px 66px 383px;
+  }
 }
 
 .promo-block__header {
@@ -27,9 +31,6 @@
   font-size: 14px;
   line-height: 24px;
   margin: 14px 0 14px 0;
-
-  @media (min-width: @tablet-width) {
-  }
 }
 
 .promo-block__button {
