--- a/source/less/bloks/button.less
+++ b/source/less/bloks/button.less
@@ -58,7 +58,7 @@
 .obligatory-field {
   font-weight: 400;
   line-height: 21px;
-  font-size: 12px;
+  margin-left: 141px;
   text-align: right;
   text-transform: uppercase;
   color: @text-description-black;
