--- a/source/less/bloks/site-list.less
+++ b/source/less/bloks/site-list.less
@@ -3,26 +3,46 @@
   color: #ffffff;
   list-style-type: none;
   position: relative;
-
-  @media (min-width: @mobile-width) {
-    min-width: 320px;
-    min-height: 56px;
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+  width: 100%;
 
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     background-color: #ffffff;
-    margin: 0;
-    padding: 0;
-    width: 100%;
   }
 }
 
 .site-list__item {
+  &:first-child {
+    .site-list__link {
+      border-top: none;
+    }
+  }
+
+  &:last-child {
+    &:after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 7px;
+      background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 0.2) 100%
+      );
+
+      position: absolute;
+      bottom: 0;
+      left: 0;
+
+      @media (min-width: @tablet-width) {
+        display: none;
+      }
+    }
+  }
+
   @media (min-width: @tablet-width) {
     width: 20%;
 
@@ -40,36 +60,19 @@
   text-align: center;
   color: inherit;
   text-decoration: none;
+  text-transform: uppercase;
 
-  @media (min-width: @mobile-width) {
-    text-transform: uppercase;
-    border-top: 1px solid #678fa8;
-    border-bottom: 1px solid #9ac2db;
-    padding: 8px 20px 6px 20px;
-    cursor: pointer;
-  }
+  padding: 17px 20px 11px 20px;
+  border-top: 1px solid #678fa8;
+  border-bottom: 1px solid #9ac2db;
 
   @media (min-width: @tablet-width) {
     color: #000000;
-    text-align: center;
     font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
     line-height: 21px;
-    text-transform: uppercase;
     padding-top: 18px;
-    width: 153px;
+    padding-bottom: 17px;
     border: none;
-  }
-
-  @media (min-width: @desktop-width) {
-    color: #000000;
-    text-align: center;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 21px;
-    text-transform: uppercase;
   }
 }
 
