--- a/source/less/bloks/advantages.less
+++ b/source/less/bloks/advantages.less
@@ -1,9 +1,9 @@
 .advantages__list {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
-
   list-style: none;
 }
 
@@ -87,6 +87,18 @@
   font-size: 18px;
   line-height: 26px;
 
+  @media (min-width: @mobile-width) {
+    margin: 23px 18px 46px 65px;
+
+    &:nth-child(2) {
+      margin: 25px 18px 25px 65px;
+    }
+
+    &:nth-child(3) {
+      margin: 25px 18px 25px 65px;
+    }
+  }
+
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
@@ -97,6 +109,17 @@
     padding: 144px 25px 56px 30px;
   }
 }
+
+// .advantages__item--house {
+//   @media (min-width: @mobile-width) {
+//     background-image: url(../img/icon-house.svg);
+//     background-repeat: no-repeat;
+//     position: absolute;
+//     width: 39px;
+//     height: 37px;
+//     background-size: contain;
+//   }
+// }
 
 .advantages__item--white .advantages__discription {
   color: @text-description-black;
