--- a/source/less/bloks/hero.less
+++ b/source/less/bloks/hero.less
@@ -12,6 +12,21 @@
 
   @media (min-width: @desktop-width) {
     background-image: url(../img/back-desktop.jpg);
+    position: relative;
+  }
+}
+
+.hero::after {
+  @media (min-width: @tablet-width) {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 72px;
+    background: url(../img/divider-left-desktop.png) center bottom no-repeat;
+    background-size: 100% auto;
+    position: absolute;
+    bottom: 0;
+    left: 0;
   }
 }
 
