--- a/source/less/bloks/hero.less
+++ b/source/less/bloks/hero.less
@@ -1,39 +1,55 @@
 .hero {
+  position: relative;
   background: #325f7e;
   text-align: center;
-  height: 389px;
   background-image: url(../img/back-mobile.jpg);
   background-repeat: no-repeat;
+  padding: 90px 12px 85px 12px;
+  &::after {
+    content: "";
+    width: 100%;
+    height: 72px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    background: url(../img/intro-triangle.svg) center bottom no-repeat;
+  }
 
   @media (min-width: @tablet-width) {
     background-image: url(../img/back-tablet.jpg);
-    height: 518px;
+    padding-top: 77px;
+    &::after {
+      content: "";
+      width: 100%;
+      height: 72px;
+      position: absolute;
+      left: 0;
+      bottom: -3px;
+      display: block;
+      background: url(../img/white-triangle-tablet.svg) center bottom no-repeat;
+    }
   }
 
   @media (min-width: @desktop-width) {
     background-image: url(../img/back-desktop.jpg);
-    position: relative;
-  }
-}
-
-.hero::after {
-  @media (min-width: @tablet-width) {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 72px;
-    background: url(../img/divider-left-desktop.png) center bottom no-repeat;
-    background-size: 100% auto;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    padding-top: 77px;
+    &::after {
+      content: "";
+      width: 100%;
+      height: 72px;
+      position: absolute;
+      left: 0;
+      bottom: -5px;
+      display: block;
+      background: url(../img/desktop-triangle.svg) center bottom no-repeat;
+    }
   }
 }
 
 .hero__img {
-  margin: 90px 0 0 0;
-
   @media (min-width: @tablet-width) {
-    margin: 77px 0 0 0;
+    width: 461px;
+    height: 350px;
   }
 }
