--- a/source/less/bloks/promo-block.less
+++ b/source/less/bloks/promo-block.less
@@ -1,9 +1,11 @@
 .promo-block {
   background-color: #ffffff;
-  padding: 17px 20px 48px 20px;
+  padding: 47px 20px 48px 20px;
 
   @media (min-width: @tablet-width) {
-    padding: 60px 166px 55px 166px;
+    position: relative;
+    padding: 40px 166px 55px 166px;
+    top: -1px;
   }
 
   @media (min-width: @desktop-width) {
@@ -17,9 +19,13 @@
   text-align: center;
   font-size: 21px;
   line-height: 26px;
-  margin: 12px 0 0 0;
+  margin-top: -9px;
+  padding-bottom: 0;
 
   @media (min-width: @tablet-width) {
+    position: absolute;
+    top: 71px;
+    left: 236px;
     font-size: 30px;
   }
 }
@@ -30,7 +36,13 @@
   text-align: center;
   font-size: 14px;
   line-height: 24px;
-  margin: 14px 0 14px 0;
+  margin: 0 0 0 0;
+  padding-top: 0;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 78px;
+    padding-bottom: 32px;
+  }
 }
 
 .promo-block__button {
@@ -46,11 +58,13 @@
   text-decoration: none;
   text-align: center;
   width: 284px;
-  padding: 17px 30px 15px 30px;
+  padding: 10px;
+  margin-top: 28px;
 
   @media (min-width: @tablet-width) {
-    width: 458px;
+    width: 447px;
     height: 58px;
-    padding: 14px 121px 17px 121px;
+    padding: 12px 142px 15px 121px;
+    margin-top: 10px;
   }
 }
