--- a/source/less/bloks/welcome.less
+++ b/source/less/bloks/welcome.less
@@ -1,4 +1,5 @@
 .welcome {
+  position: relative;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -6,24 +7,40 @@
   background-color: #ffffff;
   color: #000000;
   text-transform: uppercase;
-  padding: 32px 18px 16px 18px;
+  padding: 18px 28px 16px 28px;
+  &::after {
+    content: "";
+    width: 100%;
+    height: 37px;
+    position: absolute;
+    left: 0;
+    bottom: -18px;
+    display: block;
+    background: url(../img/white-triangle.svg) center bottom no-repeat;
+    z-index: 1;
+  }
 
   @media (min-width: @tablet-width) {
-    padding: 47px 124px 55px 124px;
+    padding: 55px 124px 55px 124px;
+    &::after {
+      display: none;
+    }
   }
 
   @media (min-width: @desktop-width) {
-    padding: 30px 345px 20px 345px;
+    padding: 67px 345px 41px 345px;
   }
 }
 
 .welcome__header {
   font-size: 18px;
   font-weight: 700;
+  margin-bottom: 31px;
 
   @media (min-width: @tablet-width) {
     font-size: 21px;
-    margin: 20px;
+    margin: 0;
+    width: 520px;
   }
 }
 
@@ -33,7 +50,7 @@
   font-weight: 400;
 
   @media (min-width: @tablet-width) {
-    margin-top: 29px;
-    margin-bottom: 10px;
+    margin-top: 26px;
+    margin-bottom: 0;
   }
 }
