в индексе нужно чуть сделать, начал делать форму попытка 1

--- a/source/less/bloks/form-container-header.less
+++ b/source/less/bloks/form-container-header.less
@@ -4,6 +4,8 @@
   font-size: 18px;
   text-align: center;
   text-transform: uppercase;
+  padding-top: 20px;
+  margin-bottom: 25px;
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
