--- a/source/less/bloks/hero.less
+++ b/source/less/bloks/hero.less
@@ -47,6 +47,10 @@
   }
 }
 
+.hero__small {
+  padding: 26px 12px 85px 12px;
+}
+
 .hero__img {
   @media (min-width: @tablet-width) {
     width: 461px;
