--- a/source/less/bloks/advantages.less
+++ b/source/less/bloks/advantages.less
@@ -97,6 +97,10 @@
   @media (min-width: @tablet-width) {
     padding-top: 52px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 99px;
+  }
 }
 
 .advantages__item--blue .advantages__number {
@@ -190,6 +194,7 @@
       left: 50%;
       transform: translateX(-50%);
     }
+
     @media (min-width: @desktop-width) {
       width: 76px;
       height: 73px;
@@ -276,6 +281,7 @@
 }
 
 .advantages__item-grey {
+  position: relative;
   color: #000000;
   background-color: @background-color-grey;
   text-transform: uppercase;
@@ -283,6 +289,15 @@
   list-style-type: none;
   font-size: 18px;
   padding: 24px 26px 28px 26px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 20px;
+    width: 280px;
+    border-top: 1px solid #d6d6d6;
+  }
 
   @media (min-width: @tablet-width) {
     position: relative;
@@ -296,6 +311,12 @@
     width: 256px;
     min-height: 256px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 44px 33px 29px 33px;
+    width: 400px;
+    min-height: 400px;
+  }
 }
 
 .advantages__item-grey--road {
@@ -305,6 +326,12 @@
     padding-top: 43px;
     padding-left: 40px;
     padding-right: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 54px;
+    padding-left: 150px;
+    padding-right: 150px;
   }
 }
 
@@ -316,6 +343,12 @@
     padding-top: 43px;
     padding-left: 50px;
     padding-right: 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 54px;
+    padding-left: 150px;
+    padding-right: 150px;
   }
 }
 
