--- a/source/less/bloks/popup_error.less
+++ b/source/less/bloks/popup_error.less
@@ -1,3 +1,12 @@
+.popup_error {
+  display: none;
+}
+
+// ЭТОТ ПОХОДУ ТУТ НЕ ДОЛЖЕН БЫТЬ
+.popup_success {
+  display: none;
+}
+
 .popup__title {
   font-weight: 700;
   line-height: 26px;
